--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">My Diary</string>
     <string name="action_settings">Settings</string>
+    <string name="title_txt">Title :</string>
+    <string name="title">Title</string>
+    <string name="content_txt">Content :</string>
+    <string name="diary_content">Diary content</string>
+    <string name="add_btn">Add</string>
 </resources>
